--- a/pages/ecosystem/style.css
+++ b/pages/ecosystem/style.css
@@ -20,6 +20,10 @@ body {
   padding: 0 20px;
 }
 
+::selection {
+  background-color: rgb(46, 243, 20);
+}
+
 nav {
   background-color: rgb(49, 49, 49);
   padding: 0.5rem;
@@ -38,11 +42,18 @@ h1 {
 }
 
 .search-container {
+  display: flex;
   padding: 0.5rem 0px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.search-input-bar {
+  display: none;
 }
 
 #search-button {
-  width: 100%;
+  width: 80%;
   height: 2rem;
   border-radius: 2rem;
   padding-left: .25rem;
@@ -51,10 +62,12 @@ h1 {
   border-color: transparent;
   color: var(--secondary-color);
   cursor: pointer;
+  font-size: 1rem;
 }
 
 
 svg {
+  margin-right: 1rem;
   vertical-align: middle;
 }
 
@@ -180,16 +193,13 @@ button:first-child {
   padding: 1rem;
   position: relative;
   background: linear-gradient(to right, red, purple);
-  padding: 3px;
-  /* background: rgb(2,0,36);
-  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(71,73,71,0.5836909871244635) 100%, rgba(0,212,255,1) 100%); */
+  padding: 2px;
 }
 
 .list-apps {
   background: #222;
   padding: .5rem;
   border-radius: .3rem;
-  
 }
 
 .list-apps li {
@@ -200,7 +210,7 @@ button:first-child {
 }
 
 .list-apps img {
-  border-radius: 3rem;
+  border-radius: 50%;
   padding-right: .5rem;
 }
 
@@ -210,10 +220,103 @@ button:first-child {
   font-size: .80rem;
 }
 
+.list-apps li {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+}
 
-/* @media screen and(min-width: 1250px){
-  body {
-    width: 1250px;
+li:last-child {
+  border: none;
+}
+
+.body-app-list h3{
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 900px){
+
+  #search-button {
+    width: 40%;
+    height: 2rem;
+    border-radius: 2rem;
+    padding-left: .25rem;
+    padding-right: .25rem;
+    background-color: rgba(80, 80, 80, 0.521);
+    border-color: transparent;
+    color: var(--secondary-color);
+    cursor: pointer;
+    font-size: 1rem;
   }
-} */
+
+  .search-input-bar {
+    display: inline-block;
+    background: rgba(80, 80, 80, 0.521) none repeat scroll 0% 0%;
+    border: 1px solid transparent;
+    color: rgb(134, 135, 137);
+    height: 2rem;
+    border-radius: 2rem;
+    font-size: 1.25rem;
+    padding-left: 1rem;
+  }
+
+  input::placeholder {
+    font-size: 1rem;
+    color: white;
+  }
+
+  .trending-apps-list {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .trending-apps-list li {
+    flex: 0 0 0;
+    padding-right: 2rem;
+  }
+  
+  .trending-apps-list img {
+    content:url(https://picsum.photos/150);
+  }
+
+  .trending-app-name {
+    text-align: center;
+  }
+
+  .top-apps-section {
+    padding: 1rem;
+  }
+
+  .top-apps-list {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: wrap;
+  }
+
+  .top-apps-list li {
+    padding-right: 2rem;
+  }
+
+  .top-apps-list img {
+    content:url(https://picsum.photos/90);
+  }
+
+  .list-apps-section-container {
+    display: flex;
+    justify-content: flex-end;
+  }
+
+  .list-apps-section {
+    max-width: 90%;
+  }
+
+  .body-app-list p {
+    max-width: 90%;
+  }
+
+  .top-lists-apps-global-container {
+    display: flex;
+
+  }
+
+}
   
