--- a/pages/ecosystem/style.css
+++ b/pages/ecosystem/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 ::selection {
-  background-color: rgb(46, 243, 20);
+  background-color: rgb(210, 20, 243);
 }
 
 nav {
@@ -65,10 +65,6 @@ h1 {
   font-size: 1rem;
 }
 
-
-svg {
-  vertical-align: middle;
-}
 
 .background-img img {
   opacity: 0.20;
@@ -191,6 +187,13 @@ button:first-child {
   cursor: pointer;
 }
 
+#show-more-btn:hover {
+  color: black;
+  background-color: whitesmoke;
+  transform: translate3d(0,-3px,0);
+  transition: box-shadow .25s ease,transform .25s ease;
+}
+
 .list-apps-container {
   border-radius: .3rem;
   padding: 1rem;
@@ -236,11 +239,59 @@ li:last-child {
   font-weight: 600;
 }
 
+svg:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+}
+
+.footer-gradient {
+  margin-top: 3rem;
+  top: -28px;
+  left: 0px;
+  width: 100%;
+  height: 42px;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0) linear-gradient(to top, rgb(249, 249, 251) 0%, rgb(51, 51, 51) 100%) repeat scroll 0% 0%;
+  clip-path: polygon(25px 0%, calc(100% - 25px) 0%, 100% 100%, 0% 100%);
+}
+
+.footer-main {
+  background-color: whitesmoke;
+  position: relative;
+  margin-bottom: 2rem;
+  color: black;
+  border-bottom-right-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+  padding: 2rem;
+  -moz-box-pack: justify;
+  justify-content: space-between;
+  -moz-box-align: center;
+  align-items: center;
+  z-index: 2;
+}
+
+footer ul {
+  display: flex;
+  flex-direction: column;
+}
+
+footer ul li {
+  font-weight: 800;
+}
+
+/* ****************** Desktop media queries ************************* */
+
 @media screen and (min-width: 900px){
 
-  body {
-    padding-left: 10rem;
-    padding-right: 10rem;
+  main {
+    padding-left: 20rem;
+    padding-right: 20rem;
+  }
+
+  .background-img img {
+    opacity: 0.10;
+    position: absolute;
+    margin-left: 10rem;
   }
 
   #search-button {
@@ -309,13 +360,17 @@ li:last-child {
     max-width: 90%;
   }
 
+  .list-apps li:hover {
+    background-color: rgba(110, 110, 110, 0.397);
+  }
+
   .body-app-list p {
     max-width: 90%;
   }
 
   .top-lists-apps-global-container {
     display: flex;
-
+    justify-content: space-between;
   }
 
 }
