--- a/pages/landing-page/style.css
+++ b/pages/landing-page/style.css
@@ -4,41 +4,153 @@
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
-  box-sizing:content-box;
-  width: 100%;
+  box-sizing:border-box;
+  font-weight: 300;
 }
 
 body {
     background-color: rgb(49, 49, 48);
-    color: rgb(252, 252, 252);
-    width: 100vw;
-    height: 100vh;
+    color: whitesmoke;
+}
+
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
 }
 
 .navbar {
-    background-color: #2abed8;
+    padding: 20px;
+    background-color:#161516;
+    color: whitesmoke;
 }
 
-nav a:hover 
-{
-    background: #bfbec7
+.nav-links a {
+    color: whitesmoke;
 }
 
-ul {
-    list-style: none;
+.menu {
     display: flex;
-    flex-direction:column;
+    gap: 1em;
+    font-size: 18px;
 }
 
+.menu li:hover {
+    background-color: rgb(221, 64, 64);
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+.menu li {
+    padding: 5px 14px;
+}
+
+input[type=checkbox]{
+    display: none;
+}
+
+.hamburger {
+    display: none;
+    font-size: 24px;
+    user-select: none;
+}
 
 main {
-    background: linear-gradient(#2abed8, #b53ee4);
+    background: linear-gradient(#242323, #000000);
 }
 
+#background-video {
+    height: 25vh;
+    width: 100vw;
+    object-fit: cover;
+    position:relative;
+    }
 
-footer {
-    background-color: #b53ee4;
+.bg-ss-v {
+    background-image: url(https://cryptomonde.info/wp-content/uploads/2021/09/avax-revue-crypto.png);
+    background-repeat: round;
+}
+
+.title {
+    margin: 0 40px 10px;
+    padding: 0 40px 20px 60px;
+    text-align: center;
+}
+
+.buttons-cta {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.btn-wrapper1 {
+    top: calc(50% - 22px);
+    left: 0;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .btn1 {
+    box-shadow:none;
+    appearance: none;
+    border: 0;
+    outline: 0;
+    background-color: rgb(221, 64, 64);
+    height: 45px;
+    line-height: 42px;
+    padding: 0 30px;
+    font-size: 20px;
+    border-radius: 30px;
+    color: whitesmoke;
+    cursor: pointer;
+    transition: all .5s;
+    transition-timing-function: cubic-bezier(.2, 3, .4, 1);
+    user-select: none;
+  }
+
+  .btn-wrapper2 {
+    top: calc(60% - 22px);
+    left: 0;
+    width: 100%;
+    text-align: center;
+  }
+  
+  .btn2 {
+    box-shadow:none
+    appearance: none;
+    border: 0;
+    outline: 0;
+    background-color: rgb(221, 64, 64);
+    height: 45px;
+    line-height: 42px;
+    padding: 0 30px;
+    font-size: 20px;
+    border-radius: 30px;
+    color: whitesmoke;
+    cursor: pointer;
+    transition: all .5s;
+    transition-timing-function: cubic-bezier(.2, 3, .4, 1);
+    user-select: none;
+  }
+
+.paragraph {
+    padding: 10% 10% 10%;
+    margin-bottom: 10% 10%;
+    text-align:center;
+}
+
+  footer {
+    padding: 0% 5% 0 5%;
+    background-color: #000000;
+    height: 100px;
+    font-size: 20px;
+}
+
+.ft {
     display: flex;
     justify-content: space-around;
+    background-color: whitesmoke;
+    color:rgb(49, 49, 48);
 }
-
