--- a/pages/landing-page/style.css
+++ b/pages/landing-page/style.css
@@ -29,6 +29,7 @@ li {
 
 .nav-links a {
     color: whitesmoke;
+    font-weight: 400;
 }
 
 .menu {
@@ -77,6 +78,7 @@ main {
     margin: 0 40px 10px;
     padding: 0 40px 20px 60px;
     text-align: center;
+    font-weight: 800;
 }
 
 .buttons-cta {
@@ -139,6 +141,7 @@ main {
     padding: 10% 10% 10%;
     margin-bottom: 10% 10%;
     text-align:center;
+    font-weight: 200;
 }
 
   footer {
