--- a/pages/ecosystem/style.css
+++ b/pages/ecosystem/style.css
@@ -298,11 +298,20 @@ svg:hover {
   width: 3rem;
 }
 
+/* footer mobile */
+
+footer {
+  margin-top: 2rem;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .footer-gradient {
   margin-top: 3rem;
   top: -28px;
-  left: 0px;
-  width: 100%;
   height: 42px;
   z-index: 1;
   background: rgba(0, 0, 0, 0) linear-gradient(to top, rgb(249, 249, 251) 0%, rgb(51, 51, 51) 100%) repeat scroll 0% 0%;
@@ -312,26 +321,48 @@ svg:hover {
 .footer-main {
   background-color: whitesmoke;
   position: relative;
-  margin-bottom: 2rem;
   color: black;
   border-bottom-right-radius: 1rem;
   border-bottom-left-radius: 1rem;
-  padding: 2rem;
+  padding: 1rem;
+  margin-bottom: 1rem;
   -moz-box-pack: justify;
-  justify-content: space-between;
   -moz-box-align: center;
-  align-items: center;
   z-index: 2;
 }
 
-footer ul {
+.footer-gradient, .footer-main{
+  width: 80%;
+}
+
+.logo-social-container {
   display: flex;
   flex-direction: column;
 }
 
-footer ul li {
-  font-weight: 800;
+.logo-social-container:hover {
+  cursor: pointer;
 }
+
+.footer-content {
+  display: flex;
+  justify-content: space-between;
+  width: auto;
+  height: auto;
+  font-size: .9rem;
+}
+
+.footer-logo {
+  width: 100%;
+  width: 100%;
+}
+
+.footer-logo img{
+  width: 40px;
+}
+
+/* end of footer mobile */
+
 
 /* ****************** Desktop media queries ************************* */
 
@@ -420,6 +451,54 @@ footer ul li {
     padding-right: 2rem;
   }
 
+  /* footer desktop */
+
+  .logo-social-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .social-networks {
+    padding-left: 2rem;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+
+  .social-networks svg {
+    margin-left: 1rem;
+    width: 30px;
+    height: 30px;
+  }
+
+  .footer-logo img{
+    width: 80px;
+  }
+  
+  .footer-content {
+    font-size: 1rem;
+  }
+
+  .credits {
+    display: flex;
+    margin-right: 5rem;
+  }
+
+  .p-madeby {
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+    padding-right: 1rem;
+  }
+
+  .credits-names {
+    display: flex;
+    align-items: center;
+    font-size: 1.1rem;
+    font-weight: 200;
+  }
+
+  /* end of footer desktop */
 
 }
   
