--- a/pages/devresources/developper-resources.css
+++ b/pages/devresources/developper-resources.css
@@ -4,7 +4,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter' sans-serif;
 }
 
 :root {
@@ -17,8 +17,7 @@
 
 h1 {
     font-weight: var(--fontH1);
-    /*font-size: 2.5rem;*/
-    font-size: 2rem;
+    font-size: 2.5rem;
 }
 
 h2 {
@@ -26,20 +25,55 @@ h2 {
     font-size: 1.25rem;
   }
 
+/* HEADER */
+a {
+    text-decoration: none;
+}
+
+li {
+    list-style: none;
+}
+
+.navbar {
+    padding: 20px;
+    background-color:#161516;
+    color: whitesmoke;
+}
+
+.nav-links a {
+    color: whitesmoke;
+}
+
+.menu {
+    display: flex;
+    gap: 1em;
+    font-size: 18px;
+}
+
+.menu li:hover {
+    background-color: rgb(221, 64, 64);
+    border-radius: 5px;
+    transition: 0.3s ease;
+}
+
+.menu li {
+    padding: 5px 14px;
+}
+
+input[type=checkbox]{
+    display: none;
+}
+
+.hamburger {
+    display: none;
+    font-size: 24px;
+    user-select: none;
+}
+/* END HEADER*/
+
 body {
     max-height: 100vh;
-    /*max-height: 844px;
-    min-height: 844px;*/
-    background-color: var(--secondaryColor);
-}
-
-main {
     background-color: #000;
-}
-
-.nav {
-    background-color: var(--navFootColor);
-    height: 3.125rem;    
 }
 
 .beginnersBlog {
@@ -219,12 +253,12 @@ main {
 
 .bloc1 .blackButton {
     position: relative;
-    top: 1.9rem; 
+    top: 2.938rem; 
 }
 
 .bloc2 .blackButton {
     position: relative;
-    top: 3rem; 
+    top: 4.688rem; 
 }
 .bloc3 .blackButton {
     position: relative;
@@ -232,22 +266,22 @@ main {
 }
 .bloc4 .blackButton {
     position: relative;
-    top: 4rem; 
+    top: 2.813rem; 
 }
 .bloc5 .blackButton {
     position: relative;
-    top: 0.6rem;  
+    top: 1.563rem;  
 }
 .bloc6 .blackButton {
     position: relative;
-    top: 1.8rem; 
+    top: 2.813rem; 
 }
 
 .whiteButton {  
     position: -10%;
     margin-left: 3%;
     height: 10%;
-    width: 55%;
+    width: 46%;
     border-radius: 2.5rem;
     background:transparent;
     border: solid 0.063rem black;
@@ -276,7 +310,7 @@ main {
 }
 
 .toolBloc br {
-    height: 0.01rem;
+    height: 0.031rem;
 }
 
 .toolBloc1 {
@@ -310,7 +344,7 @@ main {
 }
 
 .toolBloc3 {
-    background-image: url("/pages/devresources/assets/images/chart-1905225_960_720.webp");
+   background-image: url("assets/images/chart-1905225_960_720.webp");
 }
 
 .toolBloc2 p, .toolBloc4 p, .toolBloc6 p {
@@ -349,17 +383,74 @@ main {
     transform: translateY(-180%);
 }
 
+/* footer mobile */
 
 footer {
-    background-color: var(--navFootColor);
-    height: 3.125rem;
-}
-
+    margin-top: 2rem;
+    bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  .footer-gradient {
+    margin-top: 3rem;
+    top: -28px;
+    height: 42px;
+    z-index: 1;
+    background: rgba(0, 0, 0, 0) linear-gradient(to top, rgb(249, 249, 251) 0%, rgb(51, 51, 51) 100%) repeat scroll 0% 0%;
+    clip-path: polygon(25px 0%, calc(100% - 25px) 0%, 100% 100%, 0% 100%);
+  }
+  
+  .footer-main {
+    background-color: whitesmoke;
+    position: relative;
+    color: black;
+    border-bottom-right-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+    padding: 1rem;
+    margin-bottom: 1rem;
+    -moz-box-pack: justify;
+    -moz-box-align: center;
+    z-index: 2;
+  }
+  
+  .footer-gradient, .footer-main{
+    width: 80%;
+  }
+  
+  .logo-social-container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+  .logo-social-container:hover {
+    cursor: pointer;
+  }
+  
+  .footer-content {
+    display: flex;
+    justify-content: space-between;
+    width: auto;
+    height: auto;
+    font-size: .9rem;
+  }
+  
+  .footer-logo {
+    width: 100%;
+    width: 100%;
+  }
+  
+  .footer-logo img{
+    width: 40px;
+  }
+  
+  /* end of footer mobile */
 
 @media screen and (max-width: 390px) { 
 
     body {
-        max-height: 100vh;
         /*max-width: 390px;
         max-height: 844px;*/
     }
@@ -375,6 +466,11 @@ footer {
     .toolBloc5 #background-video, .toolBloc {
         height: 16.875rem;
     }
+    
+    .toolsContainer {
+        grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
+    }
+
 }
 
 @media screen and (min-width:391px) and (max-width:800px) { 
@@ -394,6 +490,55 @@ footer {
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr 1fr;
     }
+
+  /* footer desktop */
+
+  .logo-social-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .social-networks {
+    padding-left: 2rem;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+
+  .social-networks svg {
+    margin-left: 1rem;
+    width: 30px;
+    height: 30px;
+  }
+
+  .footer-logo img{
+    width: 80px;
+  }
+  
+  .footer-content {
+    font-size: 1rem;
+  }
+
+  .credits {
+    display: flex;
+    margin-right: 5rem;
+  }
+
+  .p-madeby {
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+    padding-right: 1rem;
+  }
+
+  .credits-names {
+    display: flex;
+    align-items: center;
+    font-size: 1.1rem;
+    font-weight: 200;
+  }
+
+  /* end of footer desktop */
 }    
 
 @media screen and (min-width:801px) { 
@@ -412,4 +557,53 @@ footer {
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr 1fr;
     }
+
+  /* footer desktop */
+
+  .logo-social-container {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .social-networks {
+    padding-left: 2rem;
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+  }
+
+  .social-networks svg {
+    margin-left: 1rem;
+    width: 30px;
+    height: 30px;
+  }
+
+  .footer-logo img{
+    width: 80px;
+  }
+  
+  .footer-content {
+    font-size: 1rem;
+  }
+
+  .credits {
+    display: flex;
+    margin-right: 5rem;
+  }
+
+  .p-madeby {
+    display: flex;
+    align-items: center;
+    font-size: 1.3rem;
+    padding-right: 1rem;
+  }
+
+  .credits-names {
+    display: flex;
+    align-items: center;
+    font-size: 1.1rem;
+    font-weight: 200;
+  }
+
+  /* end of footer desktop */
 }    
