--- a/pages/ecosystem/style.css
+++ b/pages/ecosystem/style.css
@@ -24,16 +24,131 @@ body {
   background-color: rgb(210, 20, 243);
 }
 
-nav {
-  background-color: rgb(49, 49, 49);
-  padding: 0.5rem;
+/* nav mobile */
+
+/* header */
+
+.menu-desktop {
+  display: none;
 }
 
-ul {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
+.header {
+  background-color: rgb(0, 0, 0);
+  box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
+  position: fixed;
+  width: 100%;
+  z-index: 3;
+  left: 0;
 }
+
+.header ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  overflow: hidden;
+  /* background-color: rgb(0, 0, 0); *** à changer **** */
+}
+
+.header li a {
+  display: block;
+  padding: 20px 20px;
+  text-decoration: none;
+}
+
+/**** à ajouter *****/
+.header li a:visited {
+  color: var(--primary-color);
+}
+
+.header ul{
+  border-bottom: .01rem solid var(--secondary-color);
+}
+
+.header .logo {
+  display: block;
+  float: left;
+  font-size: 2em;
+  padding-top: 1rem;
+  padding-left: 1rem;
+  text-decoration: none;
+}
+
+/* menu */
+
+.header .menu {
+  clear: both;
+  max-height: 0;
+  transition: max-height .2s ease-out;
+}
+
+/* menu icon */
+
+.header .menu-icon {
+  cursor: pointer;
+  display: flex; /**** à changer *****/
+  justify-content: flex-end; /**** à changer *****/
+  padding: 28px 20px;
+  position: relative;
+  user-select: none;
+}
+
+.header .menu-icon .navicon {
+  background: var(--secondary-color); /**** à changer *****/
+  display: block;
+  height: 2px;
+  position: relative;
+  transition: background .2s ease-out;
+  width: 18px;
+}
+
+.header .menu-icon .navicon:before,
+.header .menu-icon .navicon:after {
+  background: var(--secondary-color); /**** à changer *****/
+  content: '';
+  display: block;
+  height: 100%;
+  position: absolute;
+  transition: all .2s ease-out;
+  width: 100%;
+}
+
+.header .menu-icon .navicon:before {
+  top: 5px;
+}
+
+.header .menu-icon .navicon:after {
+  top: -5px;
+}
+
+/* menu btn */
+
+.header .menu-btn {
+  display: none;
+}
+
+.header .menu-btn:checked ~ .menu {
+  max-height: 240px;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon {
+  background: transparent;
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:before {
+  transform: rotate(-45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon .navicon:after {
+  transform: rotate(45deg);
+}
+
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+  top: 0;
+}
+
+/* end of nav mobile */
+
 
 h1 {
   font-weight: '800';
@@ -368,9 +483,48 @@ footer {
 
 @media screen and (min-width: 900px){
 
+  /* nav bar  */
+
+  .menu {
+    display: flex;
+  }
+
+  .header li a {
+    padding: 20px 30px;
+  }
+
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .header .menu {
+    clear: none;
+    float: right;
+    max-height: none;
+    border-bottom: none;
+    margin-right: 8rem;
+  }
+  .header .menu-icon {
+    display: none;
+  }
+
+  .header img {
+    width: 200px;
+    margin-left: 8rem;
+  }
+
+  /* end nav bar */
+
+
+
+
+
+
   main {
-    padding-left: 15rem;
-    padding-right: 15rem;
+    padding-left: 8rem;
+    padding-right: 8rem;
   }
 
   .background-img img {
